[package]
name = "cert-registry-processor"
version = "0.1.0"

[dependencies]
clap = "2"
common = { path = "../common"}
protobuf = "2"
cfg-if = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
sabre-sdk = "0.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sawtooth-sdk = "0.1"
log = "0.4"
log4rs = "0.8"
