cargo-features = ["rename-dependency"]

[package]
name = "state_delta_subscriber"
version = "0.1.0"

[dependencies]
clap = "2"
sawtooth-sdk = "0.1"
log = "0.3"
log4rs = "0.8"
simple_logger = "0.4"
common = { path = "../common"}
database = { path = "../database"}
protobuf = "2"
regex = "1"
uuid = { version = "0.6", features = ["serde", "v4"] }
ctrlc = { version = "3.0", features = ["termination"] }
